--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -40,12 +40,14 @@ jobs:
           static_site_generator: next
           
       - name: Build and Export
-        run: npm run export
-        
+        run: |
+          npm run build
+          touch out/.nojekyll
+          
       - name: Verify output directory
         run: |
           ls -la
-          ls -la out/
+          ls -la out/ || echo "out directory not found"
           
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
