--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -41,7 +41,7 @@ jobs:
           
       - name: Build and Export
         run: |
-          npm run build
+          npm run export
           touch out/.nojekyll
           
       - name: Verify output directory
