attempt to fix build error

--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -41,8 +41,7 @@ jobs:
           
       - name: Build and Export
         run: |
-          npm run export
-          touch out/.nojekyll
+          npm run deploy
           
       - name: Verify output directory
         run: |
