--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Verify output directory
         run: |
           ls -la
-          ls -la out/ || echo "out directory not found"
+          ls -la out || echo "out directory not found"
           
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
