--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next build",
-    "deploy": "next build && next export && touch out/.nojekyll"
+    "deploy": "next build && touch out/.nojekyll"
   },
   "dependencies": {
     "react": "19.1.0",
