fix: Update GitHub Actions to use npm run build instead of deploy
- Use npm run build which creates out directory with output: 'export' config
- Add better debugging to verify out directory creation
- Remove dependency on deploy script in CI

--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -41,12 +41,16 @@ jobs:
           
       - name: Build and Export
         run: |
-          npm run deploy
+          npm run build
+          ls -la
+          touch out/.nojekyll
           
       - name: Verify output directory
         run: |
           ls -la
-          ls -la out || echo "out directory not found"
+          ls -la out/
+          echo "Contents of out directory:"
+          find out -type f | head -10
           
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
